chore: update comment in main.ipynb

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -67,6 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set data transform.\n",
     "transform = transforms.Compose([\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5,), (0.5,)),\n",
@@ -79,6 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get dataset.\n",
     "train_data = datasets.MNIST(\n",
     "    root=dataset_path,\n",
     "    train=True,\n",
@@ -86,6 +88,7 @@
     "    transform=transform,\n",
     ")\n",
     "\n",
+    "# Create data loader.\n",
     "train_loader = DataLoader(\n",
     "    dataset=train_data,\n",
     "    batch_size=batch_size,\n",
