update: change hyperparameters to const

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "# Get dataset.\n",
     "train_data = datasets.MNIST(\n",
-    "    root=dataset_path,\n",
+    "    root=DATASET_PATH,\n",
     "    train=True,\n",
     "    download=True,\n",
     "    transform=transform,\n",
@@ -91,7 +91,7 @@
     "# Create data loader.\n",
     "train_loader = DataLoader(\n",
     "    dataset=train_data,\n",
-    "    batch_size=batch_size,\n",
+    "    batch_size=BATCH_SIZE,\n",
     "    shuffle=True,\n",
     ")"
    ]
@@ -133,7 +133,7 @@
    "source": [
     "# Set model.\n",
     "D_MODEL = Discriminator()\n",
-    "G_MODEL = Generator(z_dim=z_shape[0])\n",
+    "G_MODEL = Generator(z_dim=Z_SHAPE[0])\n",
     "\n",
     "D_MODEL.to(device=device)\n",
     "G_MODEL.to(device=device)"
@@ -214,7 +214,7 @@
     "print()\n",
     "\n",
     "print(\"Generator model summary:\")\n",
-    "summary(G_MODEL, input_size=z_shape)\n",
+    "summary(G_MODEL, input_size=Z_SHAPE)\n",
     "print()"
    ]
   },
@@ -225,8 +225,8 @@
    "outputs": [],
    "source": [
     "# Set optimizer and loss function.\n",
-    "d_optimizer = optim.Adam(D_MODEL.parameters(), lr=learning_rate, betas=(beta1, beta2))\n",
-    "g_optimier = optim.Adam(G_MODEL.parameters(), lr=learning_rate, betas=(beta1, beta2))\n",
+    "d_optimizer = optim.Adam(D_MODEL.parameters(), lr=LEARNING_RATE, betas=(BETA1, BETA2))\n",
+    "g_optimier = optim.Adam(G_MODEL.parameters(), lr=LEARNING_RATE, betas=(BETA1, BETA2))\n",
     "\n",
     "d_loss_fn = nn.BCELoss()\n",
     "g_loss_fn = nn.BCELoss()"
@@ -324,7 +324,7 @@
     }
    ],
    "source": [
-    "trainer = Trainer(data_loader=train_loader, batch_size=batch_size, z_dim=100, d_model=D_MODEL, g_model=G_MODEL, d_optimizer=d_optimizer, g_optimizer=g_optimier, d_loss_fn=d_loss_fn, g_loss_fn=g_loss_fn, device=device, z_shape=z_shape)\n",
+    "trainer = Trainer(data_loader=train_loader, batch_size=BATCH_SIZE, z_dim=100, d_model=D_MODEL, g_model=G_MODEL, d_optimizer=d_optimizer, g_optimizer=g_optimier, d_loss_fn=d_loss_fn, g_loss_fn=g_loss_fn, device=device, z_shape=Z_SHAPE)\n",
     "trainer.train(epochs=5, dg_ratio=2, test=True, test_num=32)"
    ]
   },
