update: update main.ipynb

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -69,6 +69,7 @@
    "source": [
     "# Set data transform.\n",
     "transform = transforms.Compose([\n",
+    "    transforms.Resize(IMAGE_SIZE),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize((0.5,), (0.5,)),\n",
     "])"
@@ -133,7 +134,7 @@
    ],
    "source": [
     "# Set model.\n",
-    "D_MODEL = Discriminator(image_size=28)\n",
+    "D_MODEL = Discriminator(image_size=IMAGE_SIZE)\n",
     "G_MODEL = Generator(z_dim=Z_SHAPE[0])\n",
     "\n",
     "D_MODEL.to(device=device)\n",
@@ -223,11 +224,11 @@
    "source": [
     "# Print model summary.\n",
     "print(\"Discriminator model summary:\")\n",
-    "print(summary(D_MODEL, input_size=[(1, 1, 28, 28), (1,)], dtypes=[torch.int, torch.int]))\n",
+    "print(summary(D_MODEL, input_size=[(1, 1, IMAGE_SIZE, IMAGE_SIZE), (1,)], dtypes=[torch.int, torch.int]))\n",
     "print()\n",
     "\n",
     "print(\"Generator model summary:\")\n",
-    "print(summary(G_MODEL, input_size=[(1, 100, 1, 1), (1,)], dtypes=[torch.int, torch.int]))\n",
+    "print(summary(G_MODEL, input_size=[(1, *Z_SHAPE), (1,)], dtypes=[torch.int, torch.int]))\n",
     "print()"
    ]
   },
@@ -238,11 +239,20 @@
    "outputs": [],
    "source": [
     "# Set optimizer and loss function.\n",
-    "d_optimizer = optim.Adam(D_MODEL.parameters(), lr=LEARNING_RATE, betas=(BETA1, BETA2))\n",
+    "d_optimizer = optim.RAdam(D_MODEL.parameters(), lr=LEARNING_RATE, betas=(BETA1, BETA2))\n",
     "g_optimier = optim.Adam(G_MODEL.parameters(), lr=LEARNING_RATE, betas=(BETA1, BETA2))\n",
     "\n",
     "d_loss_fn = nn.BCELoss()\n",
     "g_loss_fn = nn.BCELoss()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = Trainer(data_loader=train_loader, batch_size=BATCH_SIZE, d_model=D_MODEL, g_model=G_MODEL, d_optimizer=d_optimizer, g_optimizer=g_optimier, d_loss_fn=d_loss_fn, g_loss_fn=g_loss_fn, device=device, z_shape=Z_SHAPE)"
    ]
   },
   {
@@ -269,8 +279,7 @@
     }
    ],
    "source": [
-    "trainer = Trainer(data_loader=train_loader, batch_size=BATCH_SIZE, d_model=D_MODEL, g_model=G_MODEL, d_optimizer=d_optimizer, g_optimizer=g_optimier, d_loss_fn=d_loss_fn, g_loss_fn=g_loss_fn, device=device, z_shape=Z_SHAPE)\n",
-    "trainer.train(epochs=1, dg_ratio=2, test=True, test_num=30)"
+    "trainer.train(epochs=1, dg_ratio=DG_RATIO, test=TEST_WHILE_TRAIN, test_num=TEST_NUM)"
    ]
   },
   {
