update: update main.ipynb

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -252,10 +252,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set optimizer and loss function.\n",
+    "# Set optimizer.\n",
     "d_optimizer = optim.RAdam(D_MODEL.parameters(), lr=LEARNING_RATE, betas=(BETA1, BETA2))\n",
-    "g_optimier = optim.Adam(G_MODEL.parameters(), lr=LEARNING_RATE, betas=(BETA1, BETA2))\n",
-    "\n",
+    "g_optimier = optim.Adam(G_MODEL.parameters(), lr=LEARNING_RATE, betas=(BETA1, BETA2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set loss function.\n",
     "d_loss_fn = nn.BCELoss()\n",
     "g_loss_fn = nn.BCELoss()"
    ]
